--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,6 +59,7 @@ workflows:
             branches:
               only: main
       - ecr-build-and-deploy:
+          context: aws-env
           filters:
             tags:
               only: /^lambda\/v[0-9]+(\.[0-9]+)*$/
@@ -67,6 +68,7 @@ workflows:
           requires:
             - go-build
       - lambda-func-update:
+          context: aws-env
           filters:
             branches:
               ignore: /.*/
@@ -75,7 +77,7 @@ workflows:
           requires:
             - ecr-build-and-deploy
       - notify: 
-          context: slack-secrets
+          context: slack-env
           filters:
             branches:
               ignore: /.*/
